Bright Theme fixed checkbox visibility

--- a/src/Web/assets/css/main.css
+++ b/src/Web/assets/css/main.css
@@ -2413,7 +2413,7 @@ input, select, textarea {
 		input[type="checkbox"] + label,
 		input[type="radio"] + label {
 			text-decoration: none;
-			color: rgba(0, 0, 0, 0.55);
+			color: rgba(0, 0, 0, 0.65);
 			cursor: pointer;
 			display: inline-block;
 			font-size: 1em;
@@ -2439,7 +2439,7 @@ input, select, textarea {
 
 			input[type="checkbox"] + label:before,
 			input[type="radio"] + label:before {
-				background: rgba(255, 255, 255, 0.05);
+				background: rgba(255, 255, 255, 0.45);
 				border-radius: 0.25em;
 				border: solid 1px rgba(255, 255, 255, 0.15);
 				content: '';
